--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body bgcolor="blue">
+<body bgcolor=" light blue">
 <center>
 <h1 style="color: orange">Aditya Degree college</h1>
 <h2 style="color: orange">courses offered</h2>
