--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body bgcolor=" light blue">
+  <img src="draw.drawio.png">
 <center>
 <h1 style="color: orange">Aditya Degree college</h1>
 <h2 style="color: orange">courses offered</h2>
