--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body bgcolor=" light blue">
+<body bgcolor=" pink">
   <img src="draw.drawio.png">
 <center>
 <h1 style="color: orange">Aditya Degree college</h1>
